@@ -10,6 +10,7 @@ REST API
   /patients|studies|series/instances/../reconstruct to speed up the reconstruction
   in case you just want to update the MainDicomTags of that resource level only 
   e.g. after you have updated the 'ExtraMainDicomTags' for this level.
+* The "requestedTags" GET argument was deprecated in favor of "requested-tags".
 
 Plugins
 -------
